  variables. (RFB)

2014-02-03
- bios/disk.c bios/blkdev.c: Fix regression: FAT32/ext2 partitions were
  not available via XHDI. (RFB)

2014-02-04
- bdos/fsdrive.c bios/disk.c bios/floppy.c: When media change is detected,
  close windows displaying the contents of no-longer-available media. (RFB)
- aes/gemgraf.c aes/gemgraf.h aes/gemrslib.c desk/deskapp.c desk/deskins.c
  desk/deskwin.c include/obdefs.h tools/erd.c: Code cleanup: fixup types of
  some ICONBLK fields. (RFB)
- desk/deskapp.c desk/deskfun.c desk/deskmain.c desk/deskwin.c
  desk/gembind.c include/compat.h: Code cleanup: eliminate usage of ADDR()
  compatibility macro. (RFB)
- aes/optimopt.h desk/deskinf.c include/compat.h: Code cleanup: move
  function prototype to appropriate header. (RFB)

2014-02-06
- bios/acsi.c: Improve send_command(). Contributed by David Savinkoff. (RFB)

2014-02-10
- bios/screen.c: Initialise vblsem: fixes intermittent problems booting
  EmuTOS RAM on ST(e). (RFB)

2014-02-12
- readme.txt doc/*.txt: Updated documentation. (VRI)
- *: make expand. (VRI)
- Makefile: Fixed "make charset" for dirty source tree. (VRI)
- doc/status.txt: Updated documentation. (RFB)

2014-02-15
- *: Updated copyright year. (VRI)
- aes/gsx2.h: Fixed potential strict-aliasing issue. (VRI)
- Makefile bios/sd.c bios/sd.h bios/spi.c bios/spi.h include/config.h: Do not
  restrict SD/MMC support to ColdFire targets (even if SPI is). (VRI)

2014-02-18
- bios/acsi.c: Add stop_until_interrupt() while waiting for hz_200. (RFB)

2014-02-20
- doc/announce.txt: Updated. (VRI)

2014-02-21
- doc/status.txt: Added Line-A. (VRI)
- doc/status.txt: Updated supported emulators/hardware. (VRI)
- doc/bugs.txt: Updated. Contributed by Eero Tamminen. (VRI)
- doc/announce.txt: Updated release date. (VRI)

* Release: 0.9.2

2014-02-22
- doc/readme-firebee.txt: Updated with missing release information. (VRI)
- Makefile: Compile with -O2 by default, or -Os only when short of space. (VRI)