@@ -5271,3 +5271,5 @@ Start... early ages
 2014-02-22
 - doc/readme-firebee.txt: Updated with missing release information. (VRI)
 - Makefile: Compile with -O2 by default, or -Os only when short of space. (VRI)
+- aes/gemdisp.c aes/gemfmalt.c aes/geminit.c aes/gemshlib.c
+  aes/gemsuper.c: Replaced DBG_xxx with KDEBUG(). (RFB)
